--- a/Git/Bootstrap/instagramclone/css/style.css
+++ b/Git/Bootstrap/instagramclone/css/style.css
@@ -1,9 +1,27 @@
-::placeholder{
+*{
+  box-sizing: border-box;
+}
+body {
+  padding: 0em;
+}
+
+nav {
+  height: 54px;
+  background-color: white;
+}
+
+.logo {
+  margin-left: 192px;
+}
+
+input::placeholder{
   text-align: center;
   font-size: 14px;
   color: gray;
   background-position: 40%;
   background-size: 6%;
+  background-image: url(../assets/search-solid.svg);
+  background-repeat: no-repeat;
 }
 
 input.empty {
@@ -43,4 +61,8 @@ input.empty {
 .rightpanellinks:hover {
   text-decoration: none;
   color: lightgrey;
+}
+
+.middlearea {
+  max-height: 200px !important;
 }
