--- a/nodejs/cleanBlog/views/post.ejs
+++ b/nodejs/cleanBlog/views/post.ejs
@@ -23,6 +23,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
+          <a href="/posts/edit/<%= post._id %>" class="btn btn-primary" id="sendMessageButton">Edit Post</a>
+          <a href="/posts/<%= post._id %>?_method=DELETE" class="btn btn-danger" id="sendMessageButton">Delete Post</a>
           <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
 
           <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
